--- a/Roboty_Mobilne-STM32_Code/Roboty_Mobilne-STM32_Code.ioc
+++ b/Roboty_Mobilne-STM32_Code/Roboty_Mobilne-STM32_Code.ioc
@@ -81,34 +81,36 @@ Mcu.Pin14=PA5
 Mcu.Pin15=PA6
 Mcu.Pin16=PA7
 Mcu.Pin17=PB0
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
+Mcu.Pin18=PB1
+Mcu.Pin19=PB10
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PB15
-Mcu.Pin21=PC7
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA13 (JTMS-SWDIO)
-Mcu.Pin25=PA14 (JTCK-SWCLK)
-Mcu.Pin26=PA15 (JTDI)
-Mcu.Pin27=PC10
-Mcu.Pin28=PC11
-Mcu.Pin29=PB3 (JTDO-TRACESWO)
+Mcu.Pin20=PB13
+Mcu.Pin21=PB14
+Mcu.Pin22=PB15
+Mcu.Pin23=PC7
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA13 (JTMS-SWDIO)
+Mcu.Pin27=PA14 (JTCK-SWCLK)
+Mcu.Pin28=PA15 (JTDI)
+Mcu.Pin29=PC10
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=VP_SYS_VS_Systick
-Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin30=PC11
+Mcu.Pin31=PB3 (JTDO-TRACESWO)
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0
-Mcu.PinsNb=37
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -187,6 +189,13 @@ PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=KTIR_3
 PB0.Signal=ADCx_IN15
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=NFC_SPI_SS
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=NFC_IRQ
+PB10.Locked=true
+PB10.Signal=GPIO_Input
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=NFC_SPI_SCK
 PB13.Locked=true
@@ -281,7 +290,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_DMA_Init-DMA-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
 RCC.ADCFreq_Value=80000000
 RCC.AHBFreq_Value=80000000
@@ -366,9 +375,12 @@ SH.S_TIM3_CH2.0=TIM3_CH2,Input_Capture2_from_TI2
 SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
-SPI2.CalculateBaudRate=40.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI2.CalculateBaudRate=312.5 KBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.FirstBit=SPI_FIRSTBIT_LSB
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,FirstBit,DataSize
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
